--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="facebook-domain-verification"
+      content="0e0mm8o9wrrjtgwkwhk8ofnk31ke47"
+    />
     <title>Burj Khalifa: Level 124/125 Ticket</title>
     <!-- Meta Pixel Code -->
     <script>
