--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Smartsupp Live Chat script -->
     <script type="text/javascript">
       var _smartsupp = _smartsupp || {};
-      _smartsupp.key = "1f7eec28cad34884d9bb4703983ba4fc4b92745f";
+      _smartsupp.key = "6e36ba60492f7ebd0a4446792c92316e5a891205";
       window.smartsupp ||
         (function (d) {
           var s,
@@ -71,6 +71,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <noscript>
+      Powered by
+      <a href="https://www.smartsupp.com" target="“_blank”"
+        >Smartsupp</a
+      ></noscript
+    >
     <noscript
       ><img
         height="1"
