--- a/index.html
+++ b/index.html
@@ -45,27 +45,25 @@
     </script>
 
     <!-- End Meta Pixel Code -->
-
     <!-- Smartsupp Live Chat script -->
     <script type="text/javascript">
       var _smartsupp = _smartsupp || {};
-      _smartsupp.key = "f56b6485fdfddc0e1ef7334cba72e1611395c1d4";
-      window.smartsupp ||
-        (function (d) {
-          var s,
-            c,
-            o = (smartsupp = function () {
-              o._.push(arguments);
-            });
-          o._ = [];
-          s = d.getElementsByTagName("script")[0];
-          c = d.createElement("script");
-          c.type = "text/javascript";
-          c.charset = "utf-8";
-          c.async = true;
-          c.src = "https://www.smartsuppchat.com/loader.js?";
-          s.parentNode.insertBefore(c, s);
-        })(document);
+      _smartsupp.key = "efdc468a819ade11dea03565c203c6e8163e428b";
+      window.smartsupp(function (d) {
+        var s,
+          c,
+          o = (smartsupp = function () {
+            o._.push(arguments);
+          });
+        o._ = [];
+        s = d.getElementsByTagName("script")[0];
+        c = d.createElement("script");
+        c.type = "text/javascript";
+        c.charset = "utf-8";
+        c.async = true;
+        c.src = "https://www.smartsuppchat.com/loader.js?";
+        s.parentNode.insertBefore(c, s);
+      })(document);
     </script>
   </head>
   <body>
@@ -73,9 +71,10 @@
     <script type="module" src="/src/main.tsx"></script>
     <noscript>
       Powered by
-      <a href="https://www.smartsupp.com" target="“_blank”"
+      <a href="https://www.smartsupp.com" target="_blank"
         >Smartsupp</a
       ></noscript
+    >
     >
     <noscript
       ><img
