--- a/index.html
+++ b/index.html
@@ -50,21 +50,22 @@
     <script type="text/javascript">
       var _smartsupp = _smartsupp || {};
       _smartsupp.key = "efdc468a819ade11dea03565c203c6e8163e428b";
-      window.smartsupp(function (d) {
-        var s,
-          c,
-          o = (smartsupp = function () {
-            o._.push(arguments);
-          });
-        o._ = [];
-        s = d.getElementsByTagName("script")[0];
-        c = d.createElement("script");
-        c.type = "text/javascript";
-        c.charset = "utf-8";
-        c.async = true;
-        c.src = "https://www.smartsuppchat.com/loader.js?";
-        s.parentNode.insertBefore(c, s);
-      })(document);
+      window.smartsupp ||
+        (function (d) {
+          var s,
+            c,
+            o = (smartsupp = function () {
+              o._.push(arguments);
+            });
+          o._ = [];
+          s = d.getElementsByTagName("script")[0];
+          c = d.createElement("script");
+          c.type = "text/javascript";
+          c.charset = "utf-8";
+          c.async = true;
+          c.src = "https://www.smartsuppchat.com/loader.js?";
+          s.parentNode.insertBefore(c, s);
+        })(document);
     </script>
   </head>
   <body>
